# salvo-toolchain-test

./: Cargo.toml  rust-toolchain.toml
src/: main.rs
