[package]
name = "salvo-toolchain-test"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { path = "../salvo/crates/salvo", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-retry = { version = "0.3" }
tokio-test = { version = "0.4" }
tracing = "0.1"
tracing-subscriber = "0.3"